--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
         </ul>
     </div>
     <p class="copyright"><span class="footer-year"></span> © Gratys.pl Wszelkie prawa zastrzeżone.</p>
+    <p class="creator">Made by <a href="github.com/gbura">GBURA</a></p>
 </footer>
 
     <script src="./dist/js/main.min.js"></script>
