added target blank to creator

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 
     <!-- header -->
     <header class="header">
-        <ul class="header__nav">
-            <a href="#">
-                <li class="header__nav--item" id="item-1"><img src="./dist/img/icons/home.svg" alt=""></li>
-            </a>
-            <a href="#about-me">
-                <li class="header__nav--item" id="item-2"><img src="./dist/img/icons/user.svg" alt=""></li>
-            </a>
-            <a href="#offers">
-                <li class="header__nav--item" id="item-3"><img src="./dist/img/icons/tool.svg" alt=""></li>
-            </a>
-            <a href="#prices">
-                <li class="header__nav--item" id="item-4"><img src="./dist/img/icons/dollar-sign.svg" alt=""></li>
-            </a>
-        </ul>
-        <img src="./dist/img/gratyslogobig.png" alt="ant gratys logo" class="header__logo">
-    </header>
+    <ul class="header__nav">
+        <a href="#">
+            <li class="header__nav--item" id="item-1"><img src="./dist/img/icons/home.svg" alt=""></li>
+        </a>
+        <a href="#about-me">
+            <li class="header__nav--item" id="item-2"><img src="./dist/img/icons/user.svg" alt=""></li>
+        </a>
+        <a href="#offers">
+            <li class="header__nav--item" id="item-3"><img src="./dist/img/icons/tool.svg" alt=""></li>
+        </a>
+        <a href="#prices">
+            <li class="header__nav--item" id="item-4"><img src="./dist/img/icons/dollar-sign.svg" alt=""></li>
+        </a>
+    </ul>
+    <img src="./dist/img/gratyslogobig.png" alt="ant gratys logo" class="header__logo">
+</header>
 
     <!-- main -->
     <main class="main">
@@ -268,32 +268,32 @@
 
     <!-- footer section -->
     <footer class="footer">
-        <img src="./dist/img/gratyslogo.png" alt="mrufczang logo image" class="footer__logo">
-        <div class="footer-nav">
-            <ul class="footer-nav__list">
-                <a href="#">
-                    <li class="footer-nav__list--item">Strona główna</li>
-                </a>
-                <a href="#about-me">
-                    <li class="footer-nav__list--item">O mnie</li>
-                </a>
-                <a href="#offers">
-                    <li class="footer-nav__list--item">Usługi</li>
-                </a>
-                <a href="#portfolio">
-                    <li class="footer-nav__list--item">Portfolio</li>
-                </a>
-                <a href="#prices">
-                    <li class="footer-nav__list--item">Cennik</li>
-                </a>
-                <a href="#contact">
-                    <li class="footer-nav__list--item">Kontakt</li>
-                </a>
-            </ul>
-        </div>
-        <p class="copyright"><span class="footer-year"></span> © Gratys.pl Wszelkie prawa zastrzeżone.</p>
-        <p class="creator">Made by <a href="https://github.com/gbura">GBURA</a></p>
-    </footer>
+    <img src="./dist/img/gratyslogo.png" alt="mrufczang logo image" class="footer__logo">
+    <div class="footer-nav">
+        <ul class="footer-nav__list">
+            <a href="#">
+                <li class="footer-nav__list--item">Strona główna</li>
+            </a>
+            <a href="#about-me">
+                <li class="footer-nav__list--item">O mnie</li>
+            </a>
+            <a href="#offers">
+                <li class="footer-nav__list--item">Usługi</li>
+            </a>
+            <a href="#portfolio">
+                <li class="footer-nav__list--item">Portfolio</li>
+            </a>
+            <a href="#prices">
+                <li class="footer-nav__list--item">Cennik</li>
+            </a>
+            <a href="#contact">
+                <li class="footer-nav__list--item">Kontakt</li>
+            </a>
+        </ul>
+    </div>
+    <p class="copyright"><span class="footer-year"></span> © Gratys.pl Wszelkie prawa zastrzeżone.</p>
+    <p class="creator">Coded by <a href="https://github.com/gbura" target="_blank">GBURA</a></p>
+</footer>
 
     <script src="./dist/js/main.min.js"></script>
 </body>
