updated header, added more padding to icons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <li class="header__nav-item" id="item-2"><a href="#about-me"><img src="./dist/img/icons/user.svg"
                         alt=""></a></li>
 
-            <li class="header__nav-item" id="item-3"><a href="#offers"><img src="./dist/img/icons/tool.svg" alt=""></a></li>
+            <li class="header__nav-item" id="item-3"><a href="#offers"><img src="./dist/img/icons/tool.svg" alt=""></a>
+            </li>
 
             <li class="header__nav-item" id="item-4"><a href="#prices"><img src="./dist/img/icons/dollar-sign.svg"
                         alt=""></a></li>
