added aria-label to the main buttons

--- a/index.html
+++ b/index.html
@@ -23,22 +23,21 @@
 
     <!-- header -->
     <header class="header">
-        <ul class="header__nav">
+    <ul class="header__nav">
 
-            <li class="header__nav-item" id="item-1"><a href="#"><img src="./dist/img/icons/home.svg" alt=""></a></li>
+        <li class="header__nav-item" id="item-1"><a href="#"><img src="./dist/img/icons/home.svg" alt=""></a></li>
 
-            <li class="header__nav-item" id="item-2"><a href="#about-me"><img src="./dist/img/icons/user.svg"
-                        alt=""></a></li>
+        <li class="header__nav-item" id="item-2"><a href="#about-me"><img src="./dist/img/icons/user.svg"
+                    alt=""></a></li>
 
-            <li class="header__nav-item" id="item-3"><a href="#offers"><img src="./dist/img/icons/tool.svg" alt=""></a>
-            </li>
+        <li class="header__nav-item" id="item-3"><a href="#offers"><img src="./dist/img/icons/tool.svg" alt=""></a></li>
 
-            <li class="header__nav-item" id="item-4"><a href="#prices"><img src="./dist/img/icons/dollar-sign.svg"
-                        alt=""></a></li>
+        <li class="header__nav-item" id="item-4"><a href="#prices"><img src="./dist/img/icons/dollar-sign.svg"
+                    alt=""></a></li>
 
-        </ul>
-        <img src="./dist/img/gratyslogobig.png" alt="ant gratys logo" class="header__logo">
-    </header>
+    </ul>
+    <img src="./dist/img/gratyslogobig.png" alt="ant gratys logo" class="header__logo">
+</header>
 
     <!-- main -->
     <main class="main">
@@ -48,8 +47,8 @@
                 <h1 class="main-info__header">computer graphic designer</h1>
                 <p class="main-info__text">Cześć, jestem <span class="main-info__span">Filip</span></p>
                 <div class="buttons-area">
-                    <a href="#portfolio"><button class="portfolio-btn">Portfolio</button></a>
-                    <a href="#contact"><button class="contact-btn">Kontakt</button></a>
+                    <a href="#portfolio"><button class="portfolio-btn" aria-label="przycisk portfolio">Portfolio</button></a>
+                    <a href="#contact"><button class="contact-btn" aria-label="przycisk kontakt">Kontakt</button></a>
                 </div>
                 <div class="mrufka-img-box"></div>
             </div>
@@ -268,32 +267,32 @@
 
     <!-- footer section -->
     <footer class="footer">
-        <img src="./dist/img/gratyslogo.png" alt="mrufczang logo image" class="footer__logo">
-        <div class="footer-nav">
-            <ul class="footer-nav__list">
-                <a href="#">
-                    <li class="footer-nav__list-item">Strona główna</li>
-                </a>
-                <a href="#about-me">
-                    <li class="footer-nav__list-item">O mnie</li>
-                </a>
-                <a href="#offers">
-                    <li class="footer-nav__list-item">Usługi</li>
-                </a>
-                <a href="#portfolio">
-                    <li class="footer-nav__list-item">Portfolio</li>
-                </a>
-                <a href="#prices">
-                    <li class="footer-nav__list-item">Cennik</li>
-                </a>
-                <a href="#contact">
-                    <li class="footer-nav__list-item">Kontakt</li>
-                </a>
-            </ul>
-        </div>
-        <p class="footer__copyright"><span class="footer__year"></span> © Gratys.pl Wszelkie prawa zastrzeżone.</p>
-        <p class="footer__creator">Coded by <a href="https://github.com/gbura" target="_blank">GBURA</a></p>
-    </footer>
+    <img src="./dist/img/gratyslogo.png" alt="mrufczang logo image" class="footer__logo">
+    <div class="footer-nav">
+        <ul class="footer-nav__list">
+            <a href="#">
+                <li class="footer-nav__list-item">Strona główna</li>
+            </a>
+            <a href="#about-me">
+                <li class="footer-nav__list-item">O mnie</li>
+            </a>
+            <a href="#offers">
+                <li class="footer-nav__list-item">Usługi</li>
+            </a>
+            <a href="#portfolio">
+                <li class="footer-nav__list-item">Portfolio</li>
+            </a>
+            <a href="#prices">
+                <li class="footer-nav__list-item">Cennik</li>
+            </a>
+            <a href="#contact">
+                <li class="footer-nav__list-item">Kontakt</li>
+            </a>
+        </ul>
+    </div>
+    <p class="footer__copyright"><span class="footer__year"></span> © Gratys.pl Wszelkie prawa zastrzeżone.</p>
+    <p class="footer__creator">Coded by <a href="https://github.com/gbura" target="_blank">GBURA</a></p>
+</footer>
 
     <script src="./dist/js/main.min.js"></script>
 </body>
